--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
     </div>
     <div class="advantage">
         <div class="container">
-            <h2 class="advantage__header">НАШИ ПРЕИМУЩЕСТВА</h2>
+            <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
             <div class="advantage__items">
                 <div class="advantage__item">
                     <span class="icon-cup_img"></span>
@@ -74,6 +74,21 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="consultation">
+        <div class="container">
+            <div class="title title_left title_white">Получите бесплатную консультацию <br> по подбору пульсометра </div>
+            <div class="consultation__descr">Просто заполните форму заявки <br> и мы перезвоним вам в течении 10 минут</div>
+            <form class="feed-form" action="#">
+                <input name="name" required placeholder="Ваше имя" type="text">
+                <input name="phone" required placeholder="Ваш телефон" type="tel">
+                <input name="email" required placeholder="Ваш E-mail" type="email">
+
+                <button>Заказать консультацию</button>
+            </form>
+
+        </div>
+
     </div>
 </body>
 </html>
