--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
                 <input name="phone" required placeholder="Ваш телефон" type="tel">
                 <input name="email" required placeholder="Ваш E-mail" type="email">
 
-                <button class="button button_main button_consultation">Заказать консультацию</button>
+                <button class="button button_submit">Заказать консультацию</button>
             </form>
 
         </div>
