--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,11 @@
     <title>RunSmart</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/slick.css"> <!-- Slick-slider css-file -->
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <div class="promo">
+    <section class="promo">
         <div class="container">
             <header class="header">
                 <a href="#" class="header__logo">
@@ -52,8 +53,8 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="advantage">
+    </section>
+    <section class="advantage">
         <div class="container">
             <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
             <div class="advantage__items">
@@ -74,8 +75,8 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="consultation">
+    </section>
+    <section class="consultation">
         <div class="container">
             <div class="title title_left title_white">Получите бесплатную консультацию <br> по подбору пульсометра </div>
             <div class="consultation__descr">Просто заполните форму заявки <br> и мы перезвоним вам в течении 10 минут</div>
@@ -83,12 +84,20 @@
                 <input name="name" required placeholder="Ваше имя" type="text">
                 <input name="phone" required placeholder="Ваш телефон" type="tel">
                 <input name="email" required placeholder="Ваш E-mail" type="email">
-
                 <button class="button button_submit">Заказать консультацию</button>
             </form>
-
         </div>
-
-    </div>
+    </section>
+    <section class="carousel">  
+        <div class="carousel__inner">
+            <div><img src="img/slide_1.png" alt="slide_1"></div>
+            <div><img src="img/slide_2.png" alt="slide_2"></div>
+            <div><img src="img/slide_3.png" alt="slide_3"></div>
+        </div>
+    </section>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
