--- a/src/index.html
+++ b/src/index.html
@@ -89,10 +89,18 @@
         </div>
     </section>
     <section class="carousel">  
-        <div class="carousel__inner">
-            <div><img src="img/slide_1.png" alt="slide_1"></div>
-            <div><img src="img/slide_2.png" alt="slide_2"></div>
-            <div><img src="img/slide_3.png" alt="slide_3"></div>
+        <div class="container">
+            <div class="carousel__inner">
+                <div>
+                    <img src="img/slide_1.png" alt="slide_1">
+                </div>
+                <div>
+                    <img src="img/slide_2.png" alt="slide_2">
+                </div>
+                <div>
+                    <img src="img/slide_3.png" alt="slide_3">
+                </div>
+            </div>
         </div>
     </section>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
