--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
     <title>RunSmart</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/fonts.css">
-    <link rel="stylesheet" href="css/slick.css"> <!-- Slick-slider css-file -->
+    <!--     <link rel="stylesheet" href="css/slick.css"> <!-- Slick-slider css-file -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css"> <!-- tiny-slider css-file -->
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -101,11 +102,14 @@
                     <img src="img/slide_3.png" alt="slide_3">
                 </div>
             </div>
+            <button type="button" class="prev"><img src="img/chevron-left-solid.png" alt="arrow"></button>
+            <button type="button" class="next"><img src="img/chevron-right-solid.png" alt="arrow"></button>
         </div>
     </section>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <!--     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script src="js/slick.min.js"></script>
+    <script src="js/slick.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
